# tauri-leptos-template

./: .gitignore  .taurignore  Cargo.toml  shell.nix
.cargo/: config.toml
config/: config.toml
crates/libgrpc/: Cargo.toml  build.rs
crates/libgrpc/src/: fetch.rs  lib.rs
crates/libgrpc/src/codec/: rkyv.rs
crates/package/: Cargo.toml  Tauri.toml
crates/package/isolation/: hook.ts  index.html
crates/package/src/: context.rs  handler.rs  lib.rs  main.rs  plugins.rs  shared.rs
crates/service/: Cargo.toml
crates/service/sql/: init.surql
crates/service/src/: cli.rs  config.rs  lib.rs  models.rs  routes.rs  server.rs  shared.rs  traits.rs
crates/service/src/config/: client.rs  logger.rs  server.rs
crates/service/src/models/: database.rs  namespace.rs  user.rs
crates/service/src/models/database/: user.rs
crates/service/src/models/namespace/: login.rs  permission.rs  register.rs
crates/service/src/routes/: config.rs  database.rs  login.rs  namespace.rs  pingpong.rs  register.rs  version.rs
crates/service/src/routes/database/: user.rs
crates/service/src/server/: context.rs  database.rs  extension.rs  extensions.rs  router.rs  shutdown.rs  startup.rs
crates/service/src/server/extension/: client.rs  database.rs  saas_platform.rs
crates/service/src/server/extensions/: database.rs  platform.rs
crates/service/src/server/middleware/: credential.rs
crates/service/src/shared/: config.rs  consts.rs  error.rs  logger.rs  malloc.rs
crates/service/src/traits/: from_ctx.rs
crates/webview/: .env  .env.serve  Cargo.toml  Trunk.toml  build.rs  index.html  leptosfmt.toml  package.json  pnpm-lock.yaml  ui_config.toml
crates/webview/public/app_components/: vaul_drawer.js
crates/webview/public/styles/: drawer.css
crates/webview/script/: rust-ui.sh
crates/webview/src/: bootstrap.rs  lib.rs  pages.rs  routes.rs  server.rs  shared.rs  state.rs  views.rs
crates/webview/src/bootstrap/: hydrate.rs  menu.rs  shell.rs  switcher.rs  userinfo.rs
crates/webview/src/components/hooks/: mod.rs  use_can_scroll_vertical.rs  use_card_carousel.rs  use_cell_edit.rs  use_copy_clipboard.rs  use_form.rs  use_history.rs  use_horizontal_scroll.rs  use_is_mobile.rs  use_media_query.rs  use_pagination.rs  use_press_hold.rs  use_random.rs  use_theme_mode.rs  use_virtual_scroll.rs
crates/webview/src/components/ui/: accordion.rs  alert.rs  alert_dialog.rs  animate.rs  auto_form.rs  avatar.rs  badge.rs  breadcrumb.rs  bubble.rs  button.rs  button_action.rs  button_group.rs  callout.rs  card.rs  card_carousel.rs  carousel.rs  checkbox.rs  collapsible.rs  command.rs  context_menu.rs  data_grid.rs  date_picker.rs  dialog.rs  drag_and_drop.rs  drawer.rs  dropdown_menu.rs  field.rs  form.rs  hover_card.rs  input.rs  input_group.rs  input_prompt.rs  item.rs  kbd.rs  label.rs  marker.rs  marquee.rs  mask.rs  menubar.rs  message.rs  (+26 more)
crates/webview/src/models/: namespace.rs
crates/webview/src/models/namespace/: register.rs
crates/webview/src/pages/: dashboard.rs  failure.rs  login.rs  pingpong.rs  register.rs  version.rs
crates/webview/src/routes/: version.rs
crates/webview/src/server/: error.rs  logger.rs  router.rs
crates/webview/src/shared/: client.rs  consts.rs  error.rs  http_client.rs  invoke.rs  logger.rs
crates/webview/src/state/: credential.rs
crates/webview/src/views/: dashboard.rs  error.rs  failure.rs  fallback.rs  home.rs  login.rs  pingpong.rs  register.rs  version.rs
crates/webview/style/: tailwind.css
docker/devenv/: .env  Dockerfile  compose.yaml  entrypoint.sh  init.sh
protowire/: pingpong.proto
