[workspace]
members  = ["crates/*"]
resolver = "3"


[workspace.package]
edition = "2024"
license = "MIT"
version = "0.0.1"


[workspace.dependencies]
# Member
libgrpc = { path = "crates/libgrpc", version = "0.0.1" }
service = { path = "crates/service", version = "0.0.1" }

# Extern
axum               = { default-features = false, version = "0.8" }
bytes              = { default-features = false, version = "1" }
chrono             = { default-features = false, version = "0.4" }
clap               = { default-features = false, version = "4.5" }
config             = { default-features = false, version = "0.15" }
leptos             = { default-features = false, version = "0.8" }
leptos_axum        = { default-features = false, version = "0.8" }
leptos_meta        = { default-features = false, version = "0.8" }
leptos_router      = { default-features = false, version = "0.8" }
mimalloc           = { default-features = false, version = "0.1" }
serde              = { default-features = false, version = "1" }
thiserror          = { default-features = false, version = "2.0" }
tokio              = { default-features = false, version = "1" }
tokio-util         = { default-features = false, version = "0.7" }
tracing            = { default-features = false, version = "0.1" }
tracing-subscriber = { default-features = false, version = "0.3" }

# Build

# Test
insta = { default-features = false, version = "1.44" }


[patch.crates-io]


[workspace.lints.clippy]
as_conversions = "warn"
pedantic       = "warn"

default_trait_access    = { level = "allow", priority = 1 }
ignored_unit_patterns   = { level = "allow", priority = 1 }
missing_errors_doc      = { level = "allow", priority = 1 }
missing_safety_doc      = { level = "allow", priority = 1 }
must_use_candidate      = { level = "allow", priority = 1 }
new_without_default     = { level = "allow", priority = 1 }
unused_async            = { level = "allow", priority = 1 }
unused_async_trait_impl = { level = "allow", priority = 1 }


[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
strip         = "symbols"
