[package]
name = "libgrpc"

description = "libgrpc"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[lib]
crate-type = ["cdylib", "rlib", "staticlib"]


[features]
default = ["rkyv-codec"]

browser    = []
gzip       = ["tonic/gzip"]      # TODO: zstd(wasm)
rkyv-codec = ["dep:rkyv"]
router     = ["tonic/router"]
transport  = ["tonic/transport"]


[lints]
workspace = true


[dependencies]
bytes     = { workspace = true }
futures   = { workspace = true, features = ["std"] }
gloo      = { workspace = true, features = ["net"] }
thiserror = { workspace = true }

prost = { default-features = false, version = "0.14", features = ["derive"] }
rkyv  = { default-features = false, version = "0.8", features = ["std", "unaligned"], optional = true }
tonic = { default-features = false, version = "0.14", features = ["codegen"] }

# Web
http-body            = { default-features = false, version = "1.0" }
http-body-util       = { default-features = false, version = "0.1" }
tonic-web            = { default-features = false, version = "0.14" }
wasm-bindgen         = { default-features = false, version = "0.2" }
wasm-bindgen-futures = { default-features = false, version = "0.4" }
wasm-streams         = { default-features = false, version = "0.5" }
web-sys              = { default-features = false, version = "0.3", features = ["Clipboard", "DomRect", "MediaQueryList", "Navigator", "NodeList", "Storage"] }


[build-dependencies]
tonic-prost-build = { default-features = false, version = "0.14", features = ["cleanup-markdown"] }
