[package]
name = "service"

description = "service"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[lib]
crate-type = ["cdylib", "rlib", "staticlib"]


[[bin]]
name              = "server"
required-features = ["server"]

[[bin]]
name              = "database"
required-features = ["server"]


[features]
default = []

mimalloc = ["dep:mimalloc"]
server   = ["axum/tokio", "axum/ws", "dep:leptos_axum", "leptos/ssr", "leptos_axum/default", "libgrpc/router", "libgrpc/transport", "surrealdb/kv-rocksdb", "tokio/net", "tokio/rt-multi-thread", "tokio/signal"]


[lints]
workspace = true


[dependencies]
libgrpc = { workspace = true, features = ["gzip"] }

axum               = { workspace = true, features = ["http2", "json", "macros", "query", "tower-log", "tracing"] }
chrono             = { workspace = true, features = ["serde"] }
clap               = { workspace = true, features = ["color", "derive", "env", "error-context", "help", "std", "suggestions", "usage"] }
config             = { workspace = true, features = ["toml"] }
leptos             = { workspace = true, features = ["tracing"] }
leptos_axum        = { workspace = true, features = ["tracing"], optional = true }
mimalloc           = { workspace = true, optional = true }
serde              = { workspace = true, features = ["derive"] }
surrealdb          = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true, features = ["macros", "sync", "time"] }
tokio-util         = { workspace = true, features = ["rt"] }
tower-http         = { workspace = true, features = ["auth", "cors", "trace"] }
tracing            = { workspace = true, features = ["attributes", "log", "release_max_level_info", "std"] }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "fmt", "smallvec", "std", "tracing-log"] }

# Http Client
reqwest = { default-features = false, version = "0.13", features = ["charset", "http2", "json", "query", "rustls"] }


[dev-dependencies]
insta = { workspace = true, features = ["colors", "redactions"] }
