[package]
name = "webview"

description = "webview"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[lib]
crate-type = ["cdylib", "rlib", "staticlib"]


[[bin]]
name              = "client"
required-features = ["csr"]

[[bin]]
name              = "server"
required-features = ["ssr"]


[features]
default = []

csr     = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr     = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "service/server", "tokio/net", "tokio/rt-multi-thread"]


[lints]
workspace = true


[dependencies]
libgrpc = { workspace = true, features = ["gzip"] }
service = { workspace = true }

gloo          = { workspace = true, features = ["net"] }
leptos        = { workspace = true, features = ["tracing"] }
leptos_meta   = { workspace = true, features = ["tracing"] }
leptos_router = { workspace = true, features = ["tracing"] }
serde         = { workspace = true, features = ["derive"] }
thiserror     = { workspace = true }
tokio         = { workspace = true, features = ["macros", "sync", "time"] }
tracing       = { workspace = true, features = ["attributes", "log", "release_max_level_info", "std"] }

# Console log
console_error_panic_hook = { default-features = false, version = "0.1" }
console_log              = { default-features = false, version = "1.0", features = ["color"] }

# RustUI
icons     = { default-features = false, version = "0.18", features = ["leptos", "leptos_animated"] }
leptos_ui = { default-features = false, version = "0.3" }
strum     = { default-features = false, version = "0.28", features = ["derive", "std"] }
time      = { default-features = false, version = "0.3", features = ["std"] }
tw_merge  = { default-features = false, version = "0.1", features = ["variant"] }
validator = { default-features = false, version = "0.20", features = ["card", "derive", "unic"] }


[build-dependencies]
cfg_aliases = { workspace = true }


[package.metadata.leptos]
assets-dir          = "./public"
bin-exe-name        = "server"
bin-features        = ["ssr"]
bin-target          = "server"
hash-files          = true
lib-features        = ["hydrate"]
reload-port         = 1421
site-addr           = "127.0.0.1:1420"
site-root           = "./dist"
style-file          = "./style/main.css"
tailwind-input-file = "./style/tailwind.css"

disable-server-fn-hash = true
server-fn-mod-path     = true
server-fn-prefix       = "/server/fn"
